@@ -1,6 +1,8 @@
 devel
 -----
 
+* BTS-1075: AQL: RETURN DOCUMENT ("") inconsistent - single server vs cluster.
+
 * Do not query vertex data in K_PATHS queries if vertex data is not needed.
 
 * Removed assertions from cluster rebalance js test that obligated the rebalance
@@ -34,7 +36,7 @@ devel
 
 * Updated OpenSSL to 1.1.1s.
 
-* BTS_483: Added restriction for usage of query cache for streaming and JS 
+* BTS-483: Added restriction for usage of query cache for streaming and JS 
   transactions when they are not read-only.
 
 * Remove map and map.gz files from repository and add them to gitignore.
